--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "my-v0-project",
-  "version": "0.1.0",
+  "name": "volunteer-platform",
+  "version": "1.0.0",
   "private": true,
+  "description": "智能志愿者平台 - 基于Next.js的现代化志愿者管理系统",
+  "author": "zwx2465785268",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/zwx2465785268/volunteer-platform.git"
+  },
   "scripts": {
     "build": "next build",
     "dev": "next dev",
