--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "tsx": "^4.20.3",
+    "uuid": "^10.0.0",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
@@ -79,6 +80,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "postcss": "^8.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
